<resources>
    <string name="app_name">Online Store</string>
    <string name="RS">Rs:</string>
    <string name="qty">Qty: </string>
    <string name="open_cart">open cart</string>
    <string name="check_out">Check Out</string>
    <string name="full_name">Full Name:</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="contact_no">Contact No.</string>
    <string name="payment_method">Payment Method:</string>
    <string name="cash_on_delivery">Cash On delivery</string>
    <string name="easypaisa">EasyPaisa</string>
    <string name="confirm_and_place_order">Confirm and Place Order</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_information">Personal Information</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="remember_me">Remember me</string>
    <string name="please_wait">Please wait...</string>
    <string name="total_payable_amount">Total Payable Amount: %d Rs</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="my_info">My Info</string>
    <string name="my_cart">My Cart</string>
    <string name="account">Account</string>
<!--
    <string name="favorites">Favorites</string>
-->
    <string name="sort_by">Sort By</string>
    <string name="a_z">A-Z</string>
    <string name="date">Date</string>
    <string name="rating">Rating</string>
    <string name="price_low_to_high">Price Low to High</string>

</resources>