<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="checkOut"
            type="com.example.onlinestore.ui.main.CheckOutFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            tools:context=".ui.main.CheckOutFragment">

            <!--            <com.google.android.material.textview.MaterialTextView-->
            <!--                android:id="@+id/tvCheckOutName"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                android:layout_marginTop="12dp"-->
            <!--                android:elevation="2dp"-->
            <!--                android:text="@string/full_name"-->
            <!--                android:textSize="20sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCOName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCheckOutName" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:id="@+id/etCOName"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_margin="8dp"-->
            <!--                android:inputType="text"-->
            <!--                android:textSize="14sp"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/tvCheckOutName" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView5"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                android:layout_marginTop="24dp"-->
            <!--                android:elevation="2dp"-->
            <!--                android:text="@string/shipping_address"-->
            <!--                android:textSize="20sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/til1" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/shipping_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCOAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--            <TextView-->
            <!--                android:id="@+id/textView6"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                android:layout_marginTop="24dp"-->
            <!--                android:text="@string/contact_no"-->
            <!--                android:textSize="20sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/til2" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:hint="@string/contact_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCOContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/remember_me"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/payment_method"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_remember_me" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.185">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbCod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/cash_on_delivery" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbEasypaysa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/easypaisa" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlaceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="5dp"
                app:elevation="5dp"
                android:text="@string/confirm_and_place_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- android:backgroundTint="@color/btn_check_out"-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
